<resources>
  <string name="app_name">Тест приложеньки</string>
  <string name="title_for_field_sms_setting">Введите номер телефона для смс</string>
  <string name="placeholder_tel">7953.......</string>
  <string name="save_url_btn">Сохр.</string>
  <string name="placeholder_url">http://pogoda.ru/get?3451</string>
  <string name="title_url_setting">Введите url</string>
  <string name="save_phone_btn">Сохр.</string>
  <string name="arm_sms_btn">Поставить по СМС</string>
  <string name="disarm_bluetooth_btn">Снять по bluetooth</string>
  <string name="arm_bluetooth_btn">Поставить по блютуз</string>
  <string name="disarm_http_btn">Снять по http</string>
  <string name="arm_http_btn">Поставить по http</string>
  <string name="disarm_sms_btn">Снять по СМС</string>
  <string name="title_texts_sms_setting">Введите текст для смс</string>
  <string name="placeholder_text_for_sms_arm">для постановки на охрану</string>
  <string name="title_sms_disarm_setting">Введите текст для смс</string>
  <string name="placeholder_text_for_sms_disarm">для снятия с охраны</string>
  <string name="title_texts_http_setting">Введите параметры для http</string>
</resources>
