<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/phone_settings"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:context=".Settings"
  tools:visibility="visible">

 <LinearLayout
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:orientation="vertical"
   >

     <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/title_for_field_sms_setting"
       android:background="@color/colorAccent"
       android:textAlignment="center"
       android:textColor="#000000"
       android:textStyle="bold">
     </TextView>


   <LinearLayout
     android:id="@+id/phone_number"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

     <EditText
       android:id="@+id/phone_field_setting"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:autofillHints=""
       android:background="#BDB6B6"
       android:hint="@string/placeholder_tel"
       android:inputType="phone"
       android:paddingLeft="32dp"
       android:textColor="#C81717" />

     <Button
       android:id="@+id/save_phone_btn"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/save_phone_btn"
       style="@style/PurpleButton"
       android:elevation="9dp"
       android:stateListAnimator="@null"
       android:translationZ="9dp"
        />
   </LinearLayout>

   <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/title_url_setting"
     android:background="#456A67"
     android:textAlignment="center"
     android:textColor="#FFF1F1"
     android:textStyle="bold">
   </TextView>

   <LinearLayout
     android:id="@+id/url_box_setting"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

     <EditText
       android:id="@+id/url_field"
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:autofillHints=""
       android:background="#BDB6B6"
       android:hint="@string/placeholder_url"
       android:inputType="textUri"
       android:paddingLeft="32dp"
       android:textColor="#C81717" />

     <Button
       android:theme="@style/PurpleButton"
       android:id="@+id/save_url_btn"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:text="@string/save_url_btn"
       android:elevation="9dp"
       android:stateListAnimator="@null"
       android:translationZ="9dp"
       />
   </LinearLayout>
 </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
